--- a/.github/workflows/build_docker_image.yml
+++ b/.github/workflows/build_docker_image.yml
@@ -1,8 +1,6 @@
 name: Build docker image
 on:
   push:
-    branches:
-      - main
 
 jobs:
   build_docker_image:
@@ -28,7 +26,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
-          push: true
+          push: ${{ github.ref == 'refs/heads/main' }}
           build-args: GIT_COMMIT_SHA=${{ env.COMMIT_SHORT_SHA }}
           tags: |
             ghcr.io/${{ github.repository }}:latest
