--- a/.github/workflows/build_docker_image.yml
+++ b/.github/workflows/build_docker_image.yml
@@ -12,12 +12,11 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to GitHub Container Registry
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
 
       - name: Get commit short SHA
         run: 'echo "COMMIT_SHORT_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV'
@@ -29,5 +28,5 @@ jobs:
           push: ${{ github.ref == 'refs/heads/main' }}
           build-args: GIT_COMMIT_SHA=${{ env.COMMIT_SHORT_SHA }}
           tags: |
-            ghcr.io/${{ github.repository }}:latest
-            ghcr.io/${{ github.repository }}:${{ env.COMMIT_SHORT_SHA }}
+            textile/hoku-exporter:latest
+            textile/hoku-exporter:sha-${{ env.COMMIT_SHORT_SHA }}
