--- a/.github/workflows/build_docker_image.yml
+++ b/.github/workflows/build_docker_image.yml
@@ -28,5 +28,5 @@ jobs:
           push: ${{ github.ref == 'refs/heads/main' }}
           build-args: GIT_COMMIT_SHA=${{ env.COMMIT_SHORT_SHA }}
           tags: |
-            textile/hoku-exporter:latest
-            textile/hoku-exporter:sha-${{ env.COMMIT_SHORT_SHA }}
+            textilemachine/hoku-exporter:latest
+            textilemachine/hoku-exporter:sha-${{ env.COMMIT_SHORT_SHA }}
